# Golem

./: .env.example  .gitignore  .pre-commit-config.yaml  Architecture.md  Backends.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dashboard.md  FAQ.md  Getting-Started.md  Home.md  ISSUES.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  Sub-Agents.md  TODO.md  Task-Lifecycle.md  Troubleshooting.md  config.yaml.example  pyproject.toml  setup.py  vulture_whitelist.py
.claude/agents/: builder.md  code-architect.md  code-explorer.md  code-reviewer.md  complex-task.md  quick-task.md  reviewer.md  scout.md  verifier.md
.claude/commands/: review.md  task.md  validate.md
.claude/rules/: agents.md  code-style.md  error-handling.md  git-workflow.md  security.md  testing.md
.claude/skills/continual-learning/: SKILL.md  continual-learning
.claude/skills/create-skill/: SKILL.md
.claude/skills/error-recovery/: error-recovery.md
.claude/skills/golem-workspace/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/state/: golem_sessions.json  live.json
docs/: architecture.md  operations.md
docs/outreach/: owner-checklist.md
docs/plans/: 2026-03-05-dashboard-polish-v2.md  2026-03-05-dashboard-polish.md  2026-03-08-agent-pipeline-implementation.md  2026-03-08-agent-pipeline-redesign.md  2026-03-08-dashboard-warmmon-design.md  2026-03-08-dashboard-warmmon-impl.md  2026-03-09-quality-assurance-pipeline-v2-design.md  2026-03-09-quality-assurance-pipeline-v2.md  2026-03-09-smart-pre-push-hook-design.md  2026-03-09-smart-pre-push-hook-plan.md
docs/wiki/: Architecture.md  CLI-Reference.md  Claude-Code-Plugin.md  Configuration.md  Dashboard.md  Development-Guide.md  FAQ.md  Getting-Started.md  Heartbeat.md  Home.md  Sub-Agents.md  Task-Lifecycle.md  Troubleshooting.md  _Footer.md  _Sidebar.md
examples/demo-microservice/: README.md  app.py  config.yaml  test_app.py
golem/: __init__.py  __main__.py  analytics.py  ast_analysis.py  batch_cli.py  batch_monitor.py  checkpoint.py  clarity.py  cli.py  committer.py  config_editor.py  config_tui.py  context_injection.py  cost_analytics.py  data_retention.py  detect_stack.py  ensemble.py  errors.py  event_tracker.py  flaky_tests.py  flow.py  git_utils.py  handoff.py  health.py  heartbeat.py  heartbeat_worker.py  init_wizard.py  instinct_store.py  interfaces.py  knowledge_graph.py  log_context.py  mcp_scope.py  mcp_validator.py  merge_queue.py  merge_review.py  notifications.py  observation_hooks.py  orchestrator.py  parallel_review.py  pitfall_extractor.py  (+21 more)
golem/ast_rules/: bare_except.yaml  unused_import.yaml
golem/backends/: __init__.py  github.py  local.py  mcp_tools.py  profiles.py  redmine.py  slack_notifier.py  teams_notifier.py
golem/core/: __init__.py  admin.html  cli_wrapper.py  commit_format.py  config.py  config_tab.css  config_tab.js  control_api.py  daemon_utils.py  dashboard.html  dashboard.py  dashboard_shared.css  dashboard_shared.js  defaults.py  flow_base.py  heartbeat_widget.js  json_extract.py  live_state.py  log_context.py  prompt_analytics.js  report.py  run_log.py  service_clients.py  slack.py  stream_printer.py  task_api.js  task_dashboard.css  task_dashboard.html  task_dashboard.js  task_live.js  task_merge_queue.css  task_merge_queue.js  task_overview.js  task_timeline.js  teams.py
golem/lint/: contracts.py  js_innerhtml.py  js_polling.py  js_shared_state.py  mcp_schema.py  schema_sync.py  state_management.py  test_quality.py  unused_exports.py
golem/prompts/: decompose_task.txt  execute_subtask.txt  human_retry_task.txt  merge_agent.txt  orchestrate_builder_template.txt  orchestrate_planner_template.txt  orchestrate_report.txt  orchestrate_review_template.txt  orchestrate_task.txt  reconcile_merge.txt  resolve_conflict.txt  retry_task.txt  review_consistency.txt  review_security.txt  review_test_quality.txt  run_task.txt  summarize_task.txt  validate_task.txt
golem/tests/: conftest.py  test_analytics.py  test_ast_analysis.py  test_backends.py  test_batch_api_cli.py  test_batch_monitor.py  test_batch_notifiers.py  test_cancel.py  test_checkpoint.py  test_clarity.py  test_cli.py  test_cli_config.py  test_cli_full.py  test_cli_workdir.py  test_cli_wrapper.py  test_cli_wrapper_full.py  test_cli_wrapper_funcs.py  test_cli_wrapper_workdir.py  test_commit_format.py  test_committer.py  test_config.py  test_config_editor.py  test_config_tui.py  test_context_injection.py  test_control_api.py  test_cost_analytics.py  test_coverage_delta.py  test_daemon_utils.py  test_dashboard.py  test_dashboard_api_integration.py  test_dashboard_config.py  test_dashboard_e2e.py  test_dashboard_extended.py  test_dashboard_sse.py  test_data_retention.py  test_detect_stack.py  test_ensemble.py  test_errors.py  test_event_tracker_rich.py  test_flaky_tests.py  (+84 more)
scripts/: pyflakes_noqa.py
task_agent/: __init__.py  __main__.py  cli.py  commit_format.yaml  committer.py  event_tracker.py  flow.py  interfaces.py  mcp_scope.py  notifications.py  orchestrator.py  poller.py  profile.py  prompts.py  supervisor.py  validation.py  workdir.py  worktree_manager.py
task_agent/backends/: __init__.py  local.py  mcp_tools.py  profiles.py  redmine.py  teams_notifier.py
task_agent/core/: __init__.py  admin.html  cli_wrapper.py  commit_format.py  config.py  control_api.py  daemon_utils.py  dashboard.html  dashboard.py  dashboard_shared.css  dashboard_shared.js  flow_base.py  json_extract.py  live_state.py  report.py  run_log.py  service_clients.py  stream_printer.py  task_dashboard.html  teams.py
task_agent/prompts/: decompose_task.txt  execute_subtask.txt  retry_task.txt  run_task.txt  validate_task.txt
task_agent/tests/: conftest.py  test_cli_workdir.py  test_cli_wrapper.py  test_cli_wrapper_workdir.py  test_commit_format.py  test_event_tracker_rich.py  test_profiles.py  test_supervisor.py  test_task_agent.py  test_task_agent_persistence.py  test_workdir.py  test_worktree_manager.py
(+51 files in other folders)
