[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-agent"
version = "0.1.0"
description = "Pluggable AI task agent — executes tasks via Claude CLI with profile-based backends"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
redmine = []          # Redmine backend (uses requests, included in base)
teams = []            # Teams notifications (uses requests, included in base)
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.scripts]
task-agent = "task_agent.cli:main"

[tool.setuptools.packages.find]
include = ["task_agent*"]

[tool.pylint."messages control"]
disable = [
    "import-outside-toplevel",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "duplicate-code",
    "too-many-arguments",
]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.main]
load-plugins = []
source-roots = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["task_agent/tests"]
addopts = "-m 'not integration'"
markers = [
    "slow: long-running tests",
    "integration: tests requiring external services or API budget",
]

[tool.coverage.run]
source = ["task_agent"]
omit = ["task_agent/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
