[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "golem-agent"
version = "0.2.0"
description = "An autonomous AI agent — picks up work, executes it, validates the results, and reports back."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "agent", "automation", "claude", "llm", "task-execution"]
authors = [
    { name = "Boris Sobol" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.28",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
tui = [
    "prompt_toolkit>=3.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "pylint>=3.0",
    "httpx>=0.24",
    "mutmut>=2.0",
    "pyflakes>=3.0",
    "vulture>=2.0",
]

[project.urls]
Homepage = "https://github.com/itsmeboris/golem"
Repository = "https://github.com/itsmeboris/golem"
Issues = "https://github.com/itsmeboris/golem/issues"

[project.scripts]
golem = "golem.cli:main"

[tool.setuptools.packages.find]
include = ["golem*"]

[tool.black]
target-version = ["py311"]

[tool.pylint."messages control"]
disable = [
    "import-outside-toplevel",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "duplicate-code",
    "too-many-arguments",
    "missing-class-docstring",
    "missing-function-docstring",
    "protected-access",
    "unnecessary-ellipsis",
    "cyclic-import",
]
enable = [
    "logging-fstring-interpolation",   # W1203: no f-strings in logging
    "logging-format-interpolation",    # W1202: no .format() in logging
]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.main]
load-plugins = ["golem.lint.test_quality"]
source-roots = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["golem/tests"]
addopts = "-m 'not integration'"
markers = [
    "slow: long-running tests",
    "integration: tests requiring external services or API budget",
]
filterwarnings = [
    "ignore:coroutine .* was never awaited:RuntimeWarning",
    "ignore:cannot collect test class.*__init__:pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["golem"]
omit = [
    "golem/tests/*",
    "*/__init__.py",
    "golem/__main__.py",
]

[tool.coverage.paths]
source = [
    "golem",
    "/.autodirect/*/golem",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
